fixed test cases with: destroyMarble() not sending marble to home act() not working with jack validateMarbleSize() not checking null